test/spec_vectors/local_tee/fail/module_16.wat
(module (func $type-param-arg-empty-vs-num-in-block (param i32) (i32.const 0) (block (local.tee 0) (drop))))